# cxtest

./: .clang-format  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: build.yml
example/: Readme.md
example/string-utils/: CMakeLists.txt
example/string-utils/src/: string-utils.hpp
example/string-utils/test/: length.cpp  name_of.cpp
example/units/: CMakeLists.txt
example/units/src/: experiments.txt  units.cpp  units.hpp
example/units/test/: dimension.cpp  quantity.cpp  rational.cpp  unit.cpp
src/cxtest/: cxtest.cpp  cxtest.hpp  cxtest_main.cpp
src/cxtest/detail/: Structural.hpp  discovery.hpp  execution.hpp
src/jtest/: jtest.cpp  jtest.hpp  jtest_main.cpp
test/: assertions.cpp  check.hpp  discovery.cpp  execution.cpp  groups.cpp  main.cpp  multi_tu_main.cpp  multi_tu_side.cpp  templated.cpp
